tests/ui/type-impl-eof.stderr
error: no rules expected the token `impl`
 --> $DIR/type-impl-eof.rs:5:16
  |
5 |     input = [{ impl }]
  |                ^^^^ no rules expected this token in macro call
